--- Upgraded fontawesome icons         -- Required changing some class names in template files     --- Added user activity log page         -- Login logout times

--- a/templates/alias-add.html
+++ b/templates/alias-add.html
@@ -257,7 +257,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Source Database</h2>
                     </span>  
                   </div>  
@@ -290,7 +290,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Type</h2>
                     </span>  
                   </div>  
@@ -321,7 +321,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Clinical Codes</h2>
                     </span>  
                   </div>  
@@ -379,7 +379,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Title & Description</h2>
                     </span>  
                   </div>  
@@ -452,7 +452,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Educational Material</h2>
                     </span>  
                   </div>  
@@ -496,7 +496,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Icon Color</h2>
                     </span>  
                   </div>  
