--- a/templates/legacy-questionnaire-add.html
+++ b/templates/legacy-questionnaire-add.html
@@ -426,7 +426,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Legacy Questionnaire</h2>
                   </span>  
                 </div>  
@@ -470,7 +470,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Title</h2>
                   </span>  
                 </div>  
@@ -527,7 +527,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom:2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Introduction Text</h2>
                   </span>  
                 </div>  
@@ -611,7 +611,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Publish Frequency</h2>
                   </span>  
                 </div>  
@@ -766,7 +766,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Patient Filters</h2>
                   </span>  
                 </div>  
@@ -810,7 +810,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Demographic Filters</h2>
                   </span>  
                 </div>  
@@ -883,7 +883,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Appointment Status Filter</h2>
                   </span>
                 </div>
@@ -917,7 +917,7 @@
 							<div class="col-xs-12 side-menu-title">
 								<div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
 									<span style="background-color:#e6edfa; padding: 0 10px;">
-										<span class="fa fa-dot-circle-o"></span>
+										<span class="fas fa-dot-circle"></span>
 										<h2>Appointment Filters</h2>
 									</span>
 								</div>
@@ -966,7 +966,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Diagnosis Filters</h2>
                   </span>  
                 </div>  
@@ -1010,7 +1010,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Doctor Filters</h2>
                   </span>  
                 </div>  
@@ -1054,7 +1054,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Resource Filters</h2>
                   </span>  
                 </div>  
