--- a/templates/patient-registration.html
+++ b/templates/patient-registration.html
@@ -251,7 +251,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>{{ 'PATIENT_REGISTRATION_SEARCH_HEADER' | translate }}</h2>
                     </span>  
                   </div>  
@@ -322,7 +322,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'EMAIL' | translate }} & {{ 'PASSWORD' | translate }}</h2>
                       </span>  
                     </div>  
@@ -390,7 +390,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'LANGUAGE' | translate }}</h2>
                       </span>  
                     </div>  
@@ -421,7 +421,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'CELLPHONE_NUMBER' | translate }}</h2>
                       </span>  
                     </div>  
@@ -454,7 +454,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'SECURITY_QUESTIONS' | translate }}</h2>
                       </span>  
                     </div>  
@@ -572,7 +572,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'ACCESS_LEVEL_TITLE' | translate }}</h2>
                       </span>  
                     </div>  
@@ -603,7 +603,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'FINAL_CHECKS_TITLE' | translate }}</h2>
                       </span>  
                     </div>  
