--- a/templates/questionnaire-add.html
+++ b/templates/questionnaire-add.html
@@ -379,7 +379,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Title</h2>
                     </span>
                   </div>
@@ -437,7 +437,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Privacy</h2>
                     </span>
                   </div>
@@ -479,7 +479,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Add Questions</h2>
                     </span>
                   </div>
@@ -601,7 +601,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Add Tags</h2>
                       </span>
                     </div>
@@ -668,7 +668,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Patient Filters</h2>
                       </span>  
                     </div>  
@@ -713,7 +713,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Demographic Filters</h2>
                       </span>  
                     </div>  
@@ -787,7 +787,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Appointment Filters</h2>
                       </span>  
                     </div>  
@@ -832,7 +832,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Diagnosis Filters</h2>
                       </span>  
                     </div>  
@@ -877,7 +877,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Doctor Filters</h2>
                       </span>  
                     </div>  
