--- a/templates/user-add.html
+++ b/templates/user-add.html
@@ -162,7 +162,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Username & Password</h2>
                     </span>  
                   </div>  
@@ -229,7 +229,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Role</h2>
                     </span>  
                   </div>  
