--- a/templates/cron.html
+++ b/templates/cron.html
@@ -24,7 +24,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Cron Date & Time</h2>
                   </span>  
                 </div>  
@@ -66,7 +66,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Repeat Interval</h2>
                   </span>  
                 </div>  
