--- a/templates/diagnosis-translation-add.html
+++ b/templates/diagnosis-translation-add.html
@@ -216,7 +216,7 @@
 							<div class="col-xs-12 side-menu-title">
 								<div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
 									<span style="background-color:#e6edfa; padding: 0 10px;">
-										<span class="fa fa-dot-circle-o"></span>
+										<span class="fas fa-dot-circle"></span>
 										<h2>Diagnosis Translation</h2>
 									</span>
 								</div>
@@ -281,7 +281,7 @@
 							<div class="col-xs-12 side-menu-title">
 								<div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
 									<span style="background-color:#e6edfa; padding: 0 10px;">
-										<span class="fa fa-dot-circle-o"></span>
+										<span class="fas fa-dot-circle"></span>
 										<h2>Title & Description</h2>
 									</span>
 								</div>
@@ -370,7 +370,7 @@
 							<div class="col-xs-12 side-menu-title">
 								<div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
 									<span style="background-color:#e6edfa; padding: 0 10px;">
-										<span class="fa fa-dot-circle-o"></span>
+										<span class="fas fa-dot-circle"></span>
 										<h2>Educational Material</h2>
 									</span>
 								</div>
