--- a/templates/hospital-map-add.html
+++ b/templates/hospital-map-add.html
@@ -172,7 +172,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Title & Description</h2>
                     </span>  
                   </div>  
@@ -245,7 +245,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>QR Identifier & Map URL</h2>
                     </span>  
                   </div>  
