--- a/templates/post-add.html
+++ b/templates/post-add.html
@@ -329,7 +329,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Type</h2>
                     </span>  
                   </div>  
@@ -417,7 +417,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom:2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Body</h2>
                     </span>  
                   </div>  
@@ -501,7 +501,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Publish Date</h2>
                     </span>  
                   </div>  
@@ -540,7 +540,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Patient Filters</h2>
                     </span>  
                   </div>  
@@ -584,7 +584,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Appointment Filters</h2>
                     </span>  
                   </div>  
@@ -628,7 +628,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Diagnosis Filters</h2>
                     </span>  
                   </div>  
@@ -672,7 +672,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Doctor Filters</h2>
                     </span>  
                   </div>  
@@ -716,7 +716,7 @@
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="fa fa-dot-circle-o"></span>
+                      <span class="fas fa-dot-circle"></span>
                       <h2>Treatment Machine Filters</h2>
                     </span>  
                   </div>  
