--- a/templates/questionnaire-question-add.html
+++ b/templates/questionnaire-question-add.html
@@ -206,7 +206,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Question</h2>
                       </span>
                     </div>
@@ -258,7 +258,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Answer Type</h2>
                       </span>
                     </div>
@@ -391,7 +391,7 @@
                   <div class="col-xs-12 side-menu-title">
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fa fa-dot-circle-o"></span>
+                        <span class="fas fa-dot-circle"></span>
                         <h2>Question grouping</h2>
                       </span>
                     </div>
