--- a/templates/questionnaire-side-menu.html
+++ b/templates/questionnaire-side-menu.html
@@ -42,7 +42,7 @@
       <div class="panel-container animated" ng-class="{pulse: hoverManageQuestionnaires, active: currentPage == 'questionnaire'}" ng-mouseenter="hoverManageQuestionnaires=true" ng-mouseleave="hoverManageQuestionnaires=false" style="cursor:pointer;" ng-click="goToQuestionnaire()">
         <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire'}">
           <div class="panel-content">
-            <span style="font-size: 23px;vertical-align:middle" class="fa fa-pencil" aria-hidden="true"></span>
+            <span style="font-size: 23px;vertical-align:middle" class="fas fa-pencil-alt" aria-hidden="true"></span>
             <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questionnaires</strong></h6>
           </div>
         </div>
