--- a/templates/test-result-add.html
+++ b/templates/test-result-add.html
@@ -239,7 +239,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Tests</h2>
                   </span>  
                 </div>  
@@ -283,7 +283,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Title & Description</h2>
                   </span>  
                 </div>  
@@ -356,7 +356,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Test Group</h2>
                   </span>  
                 </div>  
@@ -413,7 +413,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Educational Material</h2>
                   </span>  
                 </div>  
@@ -457,7 +457,7 @@
               <div class="col-xs-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
+                    <span class="fas fa-dot-circle"></span>
                     <h2>Additional Links</h2>
                   </span>  
                 </div>  
