--- Bolded the titles in content tables     --- Changed format of session duration in user activity

--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -219,7 +219,7 @@
 
                 <!-- SECTION: User activities -->
                 <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                  <div class="panel-container animated" ng-class="{pulse: hoverUserActivityMenu, active: currentPage == 'user-activity'}" ng-mouseenter="hoverUserActivityMenu=true" ng-mouseleave="hoverUserActivityMenu=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
+                  <div class="panel-container animated" ng-class="{pulse: hoverUserActivityMenu, active: currentPage == 'user-activity'}" ng-mouseenter="hoverUserActivityMenu=true" ng-mouseleave="hoverUserActivityMenu=false" style="cursor:pointer;" ng-click="goToUserActivity()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'user-activity'}">
                       <div class="panel-content">
                         <span style="font-size: 21px; vertical-align:middle" class="fa fa-file-alt" aria-hidden="true"></span>
