--- Downgraded font awesome from 5 to 4         -- textAngular still uses version 4 and migration file does not work         -- required fixing class names     --- Added rich-text to all previously plain-text description fields

--- a/css/style.css
+++ b/css/style.css
@@ -200,11 +200,11 @@ sub {
 /*
  * Addresses margins set differently in IE6/7
  */
-dl,
+/*dl,
 menu,
 ol,
 ul {
-  margin: 1em 0; }
+  margin: 1em 0; }*/
 
 dd {
   margin: 0 0 0 40px; }
@@ -212,10 +212,10 @@ dd {
 /*
  * Addresses paddings set differently in IE6/7
  */
-menu,
+/*menu,
 ol,
 ul {
-  padding: 0 0 0 40px; }
+  padding: 0 0 0 40px; }*/
 
 /*
  * Corrects list images handled incorrectly in IE7
@@ -1061,8 +1061,8 @@ li {
 }
 
 ol, ul {
-  margin: 0;
-  padding: 0;
+  /*margin: 0;*/
+  /*padding: 0;*/
   word-wrap: break-word;
 }
 
@@ -1557,7 +1557,7 @@ footer {
 }
 
 .btn-group {
-  width: 100%;
+ /* width: 100%;*/
 }
 .btn-frequency-select {
   width: 100%;
