--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -150,7 +150,7 @@
 									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span  class="fas fa-edit fa-sm" aria-hidden="true"></span>     
+												<span  class="fa fa-pencil-square-o fa-sm" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Questionnaires</h1>
@@ -169,7 +169,7 @@
 									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span  class="fa fa-envelope fa-sm" aria-hidden="true"></span>     
+												<span class="fa fa-envelope fa-sm" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Email</h1>
@@ -188,7 +188,7 @@
 									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span class="fas fa-pen-square fa-sm" aria-hidden="true"></span>     
+												<span class="fa fa-pencil-square fa-sm" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Legacy Questionnaires</h1>
@@ -336,7 +336,7 @@
 									<div class="panel-info" >
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span  class="fa fa-file-alt fa-sm" aria-hidden="true"></span>
+												<span  class="fa fa-file-text fa-sm" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>User Activity</h1>
