--- a/templates/diagnosis/add.diagnosis-translation.html
+++ b/templates/diagnosis/add.diagnosis-translation.html
@@ -101,7 +101,7 @@
 										{{newDiagnosisTranslation.name_EN}}
 									</p>
 									<p ng-if="newDiagnosisTranslation.description_EN" style="padding-left: 10px; font-size: 10px;">
-										<em>{{newDiagnosisTranslation.description_EN}}</em>
+										<em>See rendered output for description</em>
 									</p>
 								</div>
 								<div ng-if="newDiagnosisTranslation.name_FR || newDiagnosisTranslation.description_FR" class="description">
@@ -111,7 +111,7 @@
 										{{newDiagnosisTranslation.name_FR}}
 									</p>
 									<p ng-if="newDiagnosisTranslation.description_FR" style="padding-left: 10px; font-size: 10px;">
-										<em>{{newDiagnosisTranslation.description_FR}}</em>
+										<em>See rendered output for description</em>
 									</p>
 								</div>
 							</div>
@@ -324,8 +324,8 @@
 												Description
 											</label>
 											<div class="col-xs-12 col-lg-10">
-												<textarea class="form-control" rows="5" ng-model="newDiagnosisTranslation.description_EN" ng-change="titleDescriptionUpdate()"
-												 placeholder="English Description" required="required"></textarea>
+												<div text-angular ng-model="newDiagnosisTranslation.description_EN" ng-change="titleDescriptionUpdate()"
+												 placeholder="English Description" required="required" ta-toolbar="toolbar"></div>
 											</div>
 										</div>
 									</div>
@@ -357,8 +357,8 @@
 												Description
 											</label>
 											<div class="col-md-10">
-												<textarea class="form-control" rows="5" ng-model="newDiagnosisTranslation.description_FR" ng-change="titleDescriptionUpdate()"
-												 placeholder="Description Français" required="required"></textarea>
+												<div text-angular ng-model="newDiagnosisTranslation.description_FR" ng-change="titleDescriptionUpdate()"
+												 placeholder="Description Français" required="required" ta-toolbar="toolbar"></div>
 											</div>
 										</div>
 									</div>
