--- a/templates/legacy-questionnaire/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire/legacy-questionnaire.html
@@ -11,7 +11,7 @@
 					<div class="row main-title">
             <!-- Page title -->
 						<div class="col-xs-12 col-md-6 title-content">
-							<span class="fas fa-pen-square"></span>
+							<span class="fa fa-pencil-square"></span>
 							<h1><strong>Manage Legacy Questionnaires</strong></h1>
 						</div>
             <!-- Breadcrumbs -->
