--- a/templates/login/login-form.html
+++ b/templates/login/login-form.html
@@ -13,7 +13,7 @@
       <form ng-submit="submitLogin(credentials)" method="post">
         <div class="row clearfix" style="margin-top:20px; margin-bottom:20px; display:flex; align-items:center;">
           <div class="col-xs-1">
-            <i class="fas fa-user-circle fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
           </div>
           <div class="col-xs-10">
             <input type="text" class="form-control" required="required" ng-model="credentials.username" placeholder="Username">    
