--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -57,7 +57,7 @@
           </li>
           <li ui-sref-active="active">
           	<a ui-sref="questionnaire-menu" ng-click="closeNav()">
-          		<span class="fas fa-edit" aria-hidden="true"></span>
+          		<span class="fa fa-pencil-square-o" aria-hidden="true"></span>
           		Questionnaires
           	</a>
           </li>
@@ -69,7 +69,7 @@
           </li>
           <li ui-sref-active="active">
           	<a ui-sref="legacy-questionnaire" ng-click="closeNav()">
-          		<span class="fas fa-pen-square" aria-hidden="true"></span>
+          		<span class="fa fa-pencil-square" aria-hidden="true"></span>
           		Legacy Questionnaire
           	</a>
           </li>
@@ -116,7 +116,7 @@
           </li>
           <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
             <a ui-sref="user-activity" ng-click="closeNav()">
-              <span class="fa fa-file-alt" aria-hidden="true"></span>
+              <span class="fa fa-file-text" aria-hidden="true"></span>
               User Activity
             </a>
           </li>
