--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -15,7 +15,7 @@
           <div class="row main-title">
             <!-- Page title -->
             <div class="col-xs-12 col-md-9 title-content">
-              <span class="fas fa-edit"></span>
+              <span class="fa fa-pencil-square-o"></span>
               <h1><strong>Questionnaires</strong></h1>
             </div>
             <!-- Breadcrumbs -->
@@ -44,7 +44,7 @@
 								<div class="panel-info">
 									<div class="panel-content">
 										<div class="icon-home clearfix">
-											<span class="fas fa-pencil-alt fa-sm" aria-hidden="true"></span>
+											<span class="fa fa-pencil fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">  
 											<h1>Manage Questionnaires</h1>
