--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -99,7 +99,7 @@
                   <div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu, active: currentPage == 'questionnaire/menu'}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/menu'}">
                       <div class="panel-content">
-                        <span style="font-size: 21px; vertical-align:middle" class="far fa-edit" aria-hidden="true"></span>
+                        <span style="font-size: 21px; vertical-align:middle" class="fa fa-pencil-square-o" aria-hidden="true"></span>
                         <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Questionnaires</strong></div>
                       </div>
                     </div>
@@ -123,7 +123,7 @@
                   <div class="panel-container animated" ng-class="{pulse: hoverLegacyQuestionnaireMenu, active: currentPage == 'legacy-questionnaire'}" ng-mouseenter="hoverLegacyQuestionnaireMenu=true" ng-mouseleave="hoverLegacyQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToLegacyQuestionnaire()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'legacy-questionnaire'}">
                       <div class="panel-content">
-                        <span style="font-size: 21px; vertical-align:middle" class="fas fa-pen-square" aria-hidden="true"></span>
+                        <span style="font-size: 21px; vertical-align:middle" class="fa fa-pencil-square" aria-hidden="true"></span>
                         <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Legacy Questionnaire</strong></div>
                       </div>
                     </div>
@@ -222,7 +222,7 @@
                   <div class="panel-container animated" ng-class="{pulse: hoverUserActivityMenu, active: currentPage == 'user-activity'}" ng-mouseenter="hoverUserActivityMenu=true" ng-mouseleave="hoverUserActivityMenu=false" style="cursor:pointer;" ng-click="goToUserActivity()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'user-activity'}">
                       <div class="panel-content">
-                        <span style="font-size: 21px; vertical-align:middle" class="fa fa-file-alt" aria-hidden="true"></span>
+                        <span style="font-size: 21px; vertical-align:middle" class="fa fa-file-text" aria-hidden="true"></span>
                         <div class="side-panel-title" style="display:inline-block;margin:0"><strong>User Activity</strong></div>
                       </div>
                     </div>
