--- a/templates/test-result/add.test-result.html
+++ b/templates/test-result/add.test-result.html
@@ -91,7 +91,7 @@
                       <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                       {{newTestResult.name_EN}}
                     </p>
-                    <p ng-if="newTestResult.description_EN" style="padding-left:10px; font-size:10px;"><em>{{newTestResult.description_EN}}</em></p>
+                    <p ng-if="newTestResult.description_EN" style="padding-left:10px; font-size:10px;"><em>See rendered output for description</em></p>
                   </div>
                   <div ng-if="newTestResult.name_FR || newTestResult.description_FR" class="description">
                     <p ng-if="newTestResult.name_FR" style="margin-bottom:5px;">
@@ -99,7 +99,7 @@
                       <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                       {{newTestResult.name_FR}}
                     </p>
-                    <p ng-if="newTestResult.description_FR" style="padding-left:10px; font-size:10px;"><em>{{newTestResult.description_FR}}</em></p>
+                    <p ng-if="newTestResult.description_FR" style="padding-left:10px; font-size:10px;"><em>See rendered output for description</em></p>
                   </div>
                 </div>
                 <!-- SECTION: Test group -->
@@ -318,7 +318,7 @@
                         Description
                       </label>
                       <div class="col-xs-12 col-lg-10">
-                        <textarea class="form-control" rows="5" ng-model="newTestResult.description_EN" ng-change="titleDescriptionUpdate()" placeholder="English Description" required="required"></textarea>
+                        <div text-angular ng-model="newTestResult.description_EN" ng-change="titleDescriptionUpdate()" placeholder="English Description" required="required" ta-toolbar="toolbar"></div>
                       </div>
                     </div>
                   </div>
@@ -344,7 +344,7 @@
                         Description
                       </label>
                       <div class="col-xs-12 col-lg-10">
-                        <textarea class="form-control" rows="5" ng-model="newTestResult.description_FR" ng-change="titleDescriptionUpdate()" placeholder="Description Français" required="required"></textarea>
+                        <div text-angular ng-model="newTestResult.description_FR" ng-change="titleDescriptionUpdate()" placeholder="Description Français" required="required" ta-toolbar="toolbar"></div>
                       </div>
                     </div>
                   </div>
