--- a/templates/user/user-activity.html
+++ b/templates/user/user-activity.html
@@ -11,7 +11,7 @@
             <div class="row main-title">
               <!-- Page title -->
               <div class="col-xs-12 col-md-8 title-content">
-                <span class="fa fa-file-alt"></span>
+                <span class="fa fa-file-text"></span>
                 <h1><strong>User Activity</strong></h1>
               </div>
               <!-- Breadcrumbs -->
