--- Added push notification upon appointment cancellation     --- Fixed style issue on add notification page

--- a/templates/notification/add.notification.html
+++ b/templates/notification/add.notification.html
@@ -179,7 +179,7 @@
               </div>    
               <div class="row">
                 <div ng-repeat="type in notificationTypes" class="col-xs-4 col-sm-3 col-lg-2"> 
-                  <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: newNotification.type == type.id}" ng-click="typeUpdate(type)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+                  <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: newNotification.type.id == type.id}" ng-click="typeUpdate(type)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
                     <div class="panel-info" ng-class="{active: newNotification.type.id == type.id}">
                       <div class="panel-content" style="text-align:center">
                         <span style="font-size:30px;" class="glyphicon glyphicon-bell"></span>
